# py_automations_2025

./: README.md  main_legacy.py  pyproject.toml  run_main.py  test_vim_plugin.py
src/automations/: cli.py  controller.py  domain.py  main_legacy.py  system.py
